# cppfun

./: .gitignore  README.md
1/: CMakeLists.txt  README.md  libmatrix.cpp  libmatrix.h  libnums.h  m  main.cpp
2/: .clangd  CMakeLists.txt  EDITS.md  README.md  gen.cpp  ui.cpp
2/lib/: CMakeLists.txt  lib_res.cpp  lib_res.h  res.cpp  res.h
2/lib1/: CMakeLists.txt  res.cpp  res.h
2/lib2/: CMakeLists.txt  res_table.cpp  res_table.h
2/libgen/: CMakeLists.txt  gen.cpp  gen.h
2/unit_tests/: CMakeLists.txt  test_res.cpp  test_res1.cpp  test_res2.cpp
3/: CMakeLists.txt  EDITS.md  README.md  compiler.cpp  errors.asm  main.cpp  misc.cpp  prog1.asm  prog2.asm  threads.cpp
3/docs/: ASM_SYNTAX.md  BUILD.md  EXEC_CHAIN.md  INSTRUCTIONS.md  TASK.md
3/instr_set/: CMakeLists.txt  instr_set.cpp  instr_set.h
3/lib/: CMakeLists.txt  IR_compiler.cpp  cpu.cpp  cpu.h  vec.cpp  vec.h
3/lib/IR/: CMakeLists.txt  IR.cpp
3/lib/IR_compiler/: CMakeLists.txt  IR_compiler.cpp  fwd_IR_compiler.h
3/lib/cmd_base/: cmd_base.cpp
3/lib/cpu/: CMakeLists.txt  cpu.cpp  cpu.h  fwd_cpu.h
3/lib/internals/: CMakeLists.txt
3/lib/internals/IR/: IR.cpp  IR.h  fwd_IR.h
3/lib/internals/cpu/: CMakeLists.txt  cpu.cpp  cpu.h  fwd_cpu.h
3/lib/internals/mem/: fwd_mem.h  mem.cpp  mem.h
3/lib/internals/operands/: CMakeLists.txt  operands.cpp  operands.h
3/lib/loader/: CMakeLists.txt  loader.cpp  loader.h
3/lib/mem/: CMakeLists.txt  fwd_mem.h  mcode_compiler.cpp  mem.cpp  mem.h
3/lib/prog/: CMakeLists.txt  compiler.cpp  instr_set.h  prog.cpp  prog.h
3/lib/qasm/: CMakeLists.txt
3/lib/qasm/cmd_base/: CMakeLists.txt  cmd_base.cpp  cmd_base.h  fwd_cmd_base.h
3/lib/qasm/mcode_compiler/: CMakeLists.txt  fwd_mcode_compiler.h  mcode_compiler.cpp  mcode_compiler.h
3/lib/vector/: CMakeLists.txt  fwd_vec.h  old_vec.h  test_vec.cpp
3/lib/vector/libvec/: CMakeLists.txt  vec.h  vec_iterator.h
3/plugin/: CMakeLists.txt  main.cpp
3/plugin/api/: CMakeLists.txt
3/plugin/api/include/: plugin.h  plugin_manager.h
3/plugin/api/source/: plugin_manager.cpp
3/plugin/library_manager/: CMakeLists.txt
3/plugin/library_manager/include/: library_manager.h
3/plugin/library_manager/source/: library_manager.cpp
3/plugin/plugin_internals/: CMakeLists.txt
3/plugin/plugin_internals/api/include/: plugin.h  plugin_manager.h
3/plugin/plugin_internals/api/source/: plugin_manager.cpp
3/plugin/plugin_internals/dynamic_library/: CMakeLists.txt
3/plugin/plugin_internals/dynamic_library/include/: dynamic_library.h
3/plugin/plugin_internals/dynamic_library/source/: dynamic_library.cpp
3/plugin/plugins/: CMakeLists.txt  current_time.cpp  default_set.cpp  multithread.cpp  petuha.cpp
3/programs/: prog2.asm  test.asm
3/tests/: CMakeLists.txt  test_cpu.cpp
